--- a/docs/tutorials/sits_classification/configs/default.yaml
+++ b/docs/tutorials/sits_classification/configs/default.yaml
@@ -1,5 +1,5 @@
 # Data
-data_folder: your/path/to/data
+data_folder: /Users/mafaldafrere/Documents/Cours/IODAA/COMPUTER_VISION/DL4IA/docs/tutorials/sits_classification/s2_agri_pixel_set
 n_channels: 10
 n_pixels: 64
 pad_value: 0
@@ -35,4 +35,4 @@ spectral_indices: False
 channels:
 
 # Results folder
-res_dir: your/path/to/results
+res_dir: results/default
